syntax = "proto3";

package authentication;

service AuthenticationService {
  rpc isAuth (AuthKey) returns (AuthBool) {}

  rpc auth (UserData) returns (Result) {}

  rpc register (UserData) returns (Result) {}

  rpc whoIsThis (AuthKey) returns (User) {}

  rpc getStatus (Empty) returns (Status) {}
}

message AuthKey {
  string key = 1;
}

message AuthBool {
  bool auth = 1;
}

message UserData {
  string encode = 1;
}

message Result {
  optional string key = 2;
  optional string error = 3;
}

message Empty {}

message Status {
  string message = 1;
}

message User {
  string username = 1;
}